Adjust tests and code after authentication